<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F474D4">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pick_flowers"
        android:textAlignment="center"
        android:textColor="#5A0B75"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rating"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <RadioButton
            android:id="@+id/rose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5A0B75"
            android:text="@string/rose" />

        <RadioButton
            android:id="@+id/daisy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5A0B75"
            android:text="@string/daisy" />

        <RadioButton
            android:id="@+id/sunflower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5A0B75"
            android:text="@string/sun_flower" />

        <RadioButton
            android:id="@+id/orchid"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:textColor="#5A0B75"
            android:text="@string/orchid" />

        <RadioButton
            android:id="@+id/lily"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:textColor="#5A0B75"
            android:text="@string/lily" />

        <RadioButton
            android:id="@+id/violet"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:textColor="#5A0B75"
            android:text="@string/violet" />

        <RadioButton
            android:id="@+id/tulip"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:textColor="#5A0B75"
            android:text="@string/tulip" />

        <RadioButton
            android:id="@+id/iris"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/iris"
            android:textColor="#5A0B75"
            android:textColorLink="#2C0C0C" />


    </RadioGroup>

    <Button
        android:id="@+id/cancelBTN"
        android:layout_width="101dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:background="#E15BDF"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/submitBTN"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/submitBTN"
        android:layout_width="101dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toStartOf="@+id/cancelBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating" />


</androidx.constraintlayout.widget.ConstraintLayout>